Worked on eclipse and sonar warnings and criticals.